--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: page
-description: "起风了，唯有努力生存"
-header-img: "img/home-bg.jpg"
+description: "Boilerplate of Hux Blog"
 ---
 
 {% for post in paginator.posts %}
