第一篇博客

--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: 爱生活 爱学习 爱自己
 header-img: "img/tag-bg.jpg"
 ---
 
