--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ header-img: "img/home-bg.jpg"
     </blockquote>
 
     <p>
-        Hey, I'm Zyp. Welcome come to my blog. I will be here to record my knowledge of learning process.
+        Hey, I'm Zyp. Welcome come to my blog. i will be here to record my learning process.
     </p>
 
     <p>
